--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,15 +26,15 @@ cached = "0.44.*"
 secrecy = "0.8.*"
 symlink = "0.1.*"
 fs_extra = "1.3.*"
-octocrab = "0.25.*"
+octocrab = "0.28.*"
 crossbeam = "0.8.*"
 serde_derive = "1.0.*"
 jsonwebtoken = "8.3.*"
-tokio = { version = "1.28.*", features = ["full"] }
+tokio = { version = "1.29.*", features = ["full"] }
 chrono = { version = "0.4.*", default-features = false }
 clap = { version = "4.3.*", features = ["derive", "env"] }
 
 # logging
 log = "0.4.*"
 syslog = "6.1.*"
-simple_logger = "4.1.*"
+simple_logger = { version = "4.2.*", default-features = false, features = ["timestamps"] }
